--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"@zaxerion/k-canvas": "^1.0.1",
 		"awesome-phonenumber": "^7.4.0",
 		"axios": "^1.8.4",
-		"baileys": "v7.0.0-rc.6",
+		"baileys": "6.7.21",
 		"cfonts": "^3.3.0",
 		"chalk": "^5.4.1",
 		"cheerio": "^1.0.0",
